package factory;

/**
 * @author zhenlei
 */
public class Circle implements Shape {
    @Override
    public void draw() {
        System.out.println("circle draw");
    }
}
