package factory;

/**
 * @author zhenlei
 */
public class Rectangle implements Shape {
    @Override
    public void draw() {
        System.out.println("rectangle draw");
    }
}
