package factory;

/**
 * @author zhenlei
 */
public interface Shape {
    /**
     * 图形的绘制方法
     */
    public void draw();
}
